--- a/etc/supervisor/conf.d/supervisord.conf
+++ b/etc/supervisor/conf.d/supervisord.conf
@@ -11,8 +11,11 @@ childlogdir=/var/log/supervisord/
 [program:sshd] 
 command=/usr/sbin/sshd -D
 
+[program:dbus 
+command=dbus-daemon --system
+
 [program:DVBLink] 
-command=/etc/init.d/dvblink start
+command=/usr/local/bin/dvblink/start.sh
 startsecs = 15 
 stopwaitsecs = 60
 stopasgroup = false
