--- a/etc/supervisor/conf.d/supervisord.conf
+++ b/etc/supervisor/conf.d/supervisord.conf
@@ -11,7 +11,7 @@ childlogdir=/var/log/supervisord/
 [program:sshd] 
 command=/usr/sbin/sshd -D
 
-[program:dbus 
+[program:dbus] 
 command=dbus-daemon --system
 
 [program:DVBLink] 
