--- a/etc/supervisor/conf.d/supervisord.conf
+++ b/etc/supervisor/conf.d/supervisord.conf
@@ -12,7 +12,7 @@ childlogdir=/var/log/supervisord/
 command=/usr/sbin/sshd -D
 
 [program:dbus] 
-command=dbus-daemon --system
+command=dbus-daemon --system  --nofork
 
 [program:DVBLink] 
 command=/usr/local/bin/dvblink/start.sh
