--- a/etc/supervisor/conf.d/supervisord.conf
+++ b/etc/supervisor/conf.d/supervisord.conf
@@ -11,8 +11,10 @@ childlogdir=/var/log/supervisord/
 [program:sshd] 
 command=/usr/sbin/sshd -D
 
-[program:dbus] 
-command=dbus-daemon --system  --nofork
+[program:dbus-daemon]
+command=dbus-daemon --system --nofork
+priority=1
+redirect_stderr=true
 
 [program:DVBLink] 
 command=/usr/local/bin/dvblink/start.sh
