--- a/etc/supervisor/conf.d/supervisord.conf
+++ b/etc/supervisor/conf.d/supervisord.conf
@@ -17,11 +17,10 @@ priority=1
 redirect_stderr=true
 
 [program:DVBLink] 
-command=/usr/local/bin/dvblink/start.sh
-startsecs = 15 
-stopwaitsecs = 60
-stopasgroup = false
-killasgroup = true 
+command = /etc/init.d/dvblink.sh
+startsecs = 0
+autorestart = false
+startretries = 1 
 
 [inet_http_server] 
 port=*:9001
