--- a/etc/supervisor/conf.d/supervisord.conf
+++ b/etc/supervisor/conf.d/supervisord.conf
@@ -12,7 +12,7 @@ childlogdir=/var/log/supervisord/
 command=/usr/sbin/sshd -D
 
 [program:dbus-daemon]
-command=dbus-daemon --system --nofork
+command=dbus-daemon --system --nofork --nopidfile
 priority=1
 redirect_stderr=true
 
