--- a/etc/supervisor/conf.d/supervisord.conf
+++ b/etc/supervisor/conf.d/supervisord.conf
@@ -12,9 +12,10 @@ childlogdir=/var/log/supervisord/
 command=/usr/sbin/sshd -D
 
 [program:dbus-daemon]
-command=dbus-daemon --system --nofork --nopidfile
-priority=1
-redirect_stderr=true
+command =/etc/init.d/dbus.sh
+startsecs = 0
+autorestart = false
+startretries = 1 
 
 [program:DVBLink] 
 command =/etc/init.d/dvblink.sh
