--- a/etc/supervisor/conf.d/supervisord.conf
+++ b/etc/supervisor/conf.d/supervisord.conf
@@ -11,15 +11,21 @@ childlogdir=/var/log/supervisord/
 [program:sshd] 
 command=/usr/sbin/sshd -D
 
-[program:dbus-daemon]
+[program:dbus-pidremove]
 command =/etc/init.d/dbus.sh
 startsecs = 0
 autorestart = false
 startretries = 1 
 
+[program:dbus-daemon]
+command =dbus-daemon --system --nofork
+startsecs = 5
+autorestart = false
+startretries = 1 
+
 [program:DVBLink] 
 command =/etc/init.d/dvblink.sh
-startsecs = 0
+startsecs = 10
 autorestart = false
 startretries = 1 
 
