--- a/etc/supervisor/conf.d/supervisord.conf
+++ b/etc/supervisor/conf.d/supervisord.conf
@@ -12,7 +12,7 @@ childlogdir=/var/log/supervisord/
 command=/usr/sbin/sshd -D
 
 [program:dbus-pidremove]
-command =/etc/init.d/pidremove.sh
+command =rm /var/run/dbus/pid
 startsecs = 0
 autorestart = false
 startretries = 1 
